@@ -508,6 +508,8 @@ Documentation
 Tests
 -----
 
+- Issue #7396: fix regrtest -s, which was broken by the -j enhancement.
+
 - Issue #7498: test_multiprocessing now uses test.support.find_unused_port
   instead of a hardcoded port number in test_rapid_restart.
 
